hotspot/test/testlibrary/whitebox/sun/hotspot/WhiteBox.java
@@ -59,6 +59,9 @@ public class WhiteBox {
     registerNatives();
   }
 
+  // Arguments
+  public native void printHeapSizes();
+
   // Memory
   public native long getObjectAddress(Object o);
   public native int  getHeapOopSize();
